--- a/iphone/css/style.css
+++ b/iphone/css/style.css
@@ -25,7 +25,7 @@ ul {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 15px;
+  padding: 0 15px;
 }
 .nav {
   display: flex;
@@ -41,6 +41,8 @@ ul {
   flex-grow: 1;
   flex-basis: 0;
   text-align: right;
+  font-size: 24px;
+  line-height: 29px;
 }
 .menu-item {
   padding-right: 30px;
@@ -75,7 +77,8 @@ ul {
 .new {
   padding: 90px 0 150px;
 }
-.new-title {
+.new-title,
+.color-title {
   margin: 0 0 50px;
   text-transform: uppercase;
   text-align: center;
@@ -100,4 +103,134 @@ ul {
 }
 .image-new {
   margin-left: 190px;
+}
+.color {
+  padding-bottom: 150px;
+}
+.color-list {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+.color-item img {
+  margin-bottom: 20px;
+}
+.color-item h3 {
+  font-size: 20px;
+  line-height: 26px;
+  margin: 0 0 10px;
+}
+.color-item p {
+  margin: 0;
+}
+.contacts-inner {
+  display: flex;
+  background-color: #574b63;
+  color: #fff;
+}
+.contacts-form {
+  width: 100%;
+  padding: 140px 93px;
+  text-align: center;
+}
+.contacts-title {
+  margin: 0 0 60px;
+  text-transform: uppercase;
+  font-size: 32px;
+  line-height: 39px;
+  text-align: left;
+  /*font-weight: 700;*/
+}
+.contacts-input {
+  padding: 10px 0;
+  border: none;
+  border-bottom: 1px solid #f5f5f5;
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
+  background-color: #574b63;
+}
+.contacts-input::placeholder {
+  font-size: 14px;
+  line-height: 18px;
+  color: #fff;
+  opacity: 0.5;
+  font-family: "Inter", sasn-serif;
+  font-weight: 400;
+}
+.contacts-form p {
+  opacity: 0.5;
+  text-align: center;
+  margin: 30px 0;
+}
+.contacts-form button {
+  border: none;
+  text-transform: uppercase;
+  color: #490e84;
+  background-color: #fff;
+  border-radius: 30px;
+  padding: 16px 81px;
+  font-weight: 700;
+  cursor: pointer;
+}
+.footter {
+  background-color: #0a0a0a;
+}
+.footer-inner {
+  color: #717171;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px 0;
+}
+.footer-link {
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
+@media (max-width: 1200px) {
+  .headline-img {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 1100px) {
+  .color-list {
+    flex-wrap: wrap;
+  }
+  .color-item {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 940px) {
+  .image-new {
+    display: none;
+  }
+  .new-text p,
+  .new-text b {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 560px) {
+  .title {
+    font-size: 34px;
+    line-height: 42px;
+  }
+  .new-title,
+  .color-title {
+    font-size: 28px;
+    line-height: 32px;
+  }
+  .color-item,
+  .color-item img {
+    width: 100%;
+  }
+  .headline-btn {
+    font-size: 18px;
+    line-height: 22px;
+    padding: 16px 90px;
+  }
 }
