--- a/iphone/css/style.css
+++ b/iphone/css/style.css
@@ -192,6 +192,15 @@ ul {
   .headline-img {
     max-width: 100%;
   }
+  .contacts-inner {
+    display: block;
+  }
+  .contacts-form {
+    width: auto;
+  }
+  .contacts-title {
+    text-align: center;
+  }
 }
 
 @media (max-width: 1100px) {
@@ -220,7 +229,8 @@ ul {
     line-height: 42px;
   }
   .new-title,
-  .color-title {
+  .color-title,
+  .contacts-title {
     font-size: 28px;
     line-height: 32px;
   }
