--- a/course-layout/project-1/src/css/style.css
+++ b/course-layout/project-1/src/css/style.css
@@ -1,7 +1,74 @@
+* {
+  box-sizing: border-box;
+}
 body {
   background-color: #ffe2b0;
 }
 
 header {
   text-align: center;
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style-type: none;
+  text-align: center;
+  padding: 0px;
+}
+li {
+  display: inline;
+  margin-right: 100px;
+}
+li:last-child {
+  margin-right: 0px;
+}
+a {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+nav {
+  margin-bottom: 20px;
+}
+.section-about {
+  height: 640px;
+  background: url(../img/01-Картинка-фона.jpg) center / cover no-repeat;
+  position: relative;
+}
+.section-about__block {
+  width: 420px;
+  height: 190px;
+  background: linear-gradient(
+    180deg,
+    rgba(244, 213, 178, 0.8) 0%,
+    rgba(234, 156, 65, 0.8) 100%
+  );
+  position: absolute;
+  top: 349px;
+  left: 730px;
+  text-align: center;
+  padding-top: 15px;
+  /* padding: 15px; - сразу задать вместо верхнего 15px и margin у дочернего*/
+}
+.section-about__border {
+  width: 390px;
+  height: 160px;
+  border: 1px solid black;
+  margin: 0 auto;
+  padding: 17px 0 0 28px;
+  text-align: left;
+}
+.section-about__title {
+  font-size: 36px;
+  margin-bottom: 9px;
+}
+.section-about__text {
+  font-size: 12px;
+}
+h1 {
+  margin: 0;
+}
+p {
+  margin: 0;
 }
