--- a/course-layout/project-1/src/css/style.css
+++ b/course-layout/project-1/src/css/style.css
@@ -35,6 +35,7 @@ nav {
   height: 640px;
   background: url(../img/01-Картинка-фона.jpg) center / cover no-repeat;
   position: relative;
+  margin-bottom: 20px;
 }
 .section-about__block {
   width: 420px;
@@ -45,8 +46,8 @@ nav {
     rgba(234, 156, 65, 0.8) 100%
   );
   position: absolute;
-  top: 349px;
-  left: 730px;
+  top: 54%;
+  left: 50%;
   text-align: center;
   padding-top: 15px;
   /* padding: 15px; - сразу задать вместо верхнего 15px и margin у дочернего*/
@@ -71,4 +72,44 @@ h1 {
 }
 p {
   margin: 0;
+}
+.section-description {
+  margin-bottom: 20px;
+}
+.section-description__icon-box {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.section-description__icon-box img {
+  margin-right: 76px;
+}
+.section-description__icon-box img:last-child {
+  margin-right: 0px;
+}
+.section-description__title {
+  font-size: 96px;
+  margin: 0px;
+  text-align: center;
+}
+.red {
+  color: #f15b40;
+}
+.section-description__text {
+  font-size: 18px;
+  margin: 0px;
+  text-align: center;
+  width: 1000px;
+  margin: 0 auto;
+}
+.section-map__title {
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 36px;
+}
+/* .section-map {
+  text-align: center;
+} */
+iframe {
+  display: block;
+  margin: 0 auto;
 }
