--- a/course-layout/project-1/src/css/style.css
+++ b/course-layout/project-1/src/css/style.css
@@ -1,6 +1,35 @@
 * {
   box-sizing: border-box;
 }
+@font-face {
+  font-family: "Philosopher";
+  src: local("Philosopher");
+  src: url("../fonts/Philosopher-Regular.ttf");
+}
+html {
+  font-family: "Roboto!";
+}
+@font-face {
+  font-family: "Roboto!";
+  src: local("Roboto");
+  src: url("../fonts/Roboto-Regular.eot");
+  src: url("../fonts/Roboto-Regular.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/Roboto-Regular.woff") format("woff"),
+    url("../fonts/Roboto-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Roboto!";
+  src: local("Roboto");
+  src: url("../fonts/Roboto-Bold.eot");
+  src: url("../fonts/Roboto-Bold.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/Roboto-Bold.woff") format("woff"),
+    url("../fonts/Roboto-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
 body {
   background-color: #ffe2b0;
 }
@@ -26,6 +55,7 @@ a {
   color: black;
   text-decoration: none;
   font-size: 18px;
+  font-weight: 700;
 }
 
 nav {
@@ -63,6 +93,7 @@ nav {
 .section-about__title {
   font-size: 36px;
   margin-bottom: 9px;
+  font-family: "Philosopher";
 }
 .section-about__text {
   font-size: 12px;
@@ -90,6 +121,7 @@ p {
   font-size: 96px;
   margin: 0px;
   text-align: center;
+  font-family: "Philosopher";
 }
 .red {
   color: #f15b40;
@@ -101,10 +133,14 @@ p {
   width: 1000px;
   margin: 0 auto;
 }
+.section-map {
+  margin-bottom: 20px;
+}
 .section-map__title {
   margin-bottom: 20px;
   text-align: center;
   font-size: 36px;
+  font-family: "Philosopher";
 }
 /* .section-map {
   text-align: center;
@@ -112,4 +148,21 @@ p {
 iframe {
   display: block;
   margin: 0 auto;
+}
+/*.line {
+   border-top: 1px solid #999999; */
+/* height: 1px;
+  background-color: #999999;
+  width: 1024px;
+  margin: 0 auto; 
+}*/
+hr {
+  border: none;
+  border-top: 1px solid #999999;
+  width: 1024px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+footer {
+  height: 80px;
 }
